Remove cookies from RLZ financial ping in clank

BUG=chromium:801525
TEST=none

Change-Id: Ia833bfead82d54f5e507e18596310c5507ed88a0
Reviewed-on: https://chromium-review.googlesource.com/863884
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Commit-Queue: Thiemo Nagel <tnagel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528938}
Former-commit-id: 5f5b497f56e4d04e09730b2dd61c0f48daaa56f9