chrome/browser/android/rlz/rlz_ping_handler.cc
@@ -11,6 +11,7 @@
 #include "chrome/browser/profiles/profile_android.h"
 #include "chrome/browser/profiles/profile_manager.h"
 #include "jni/RlzPingHandler_jni.h"
+#include "net/base/load_flags.h"
 #include "net/base/url_util.h"
 #include "net/http/http_status_code.h"
 #include "net/http/http_util.h"
@@ -92,7 +93,7 @@ void RlzPingHandler::Ping(
             destination: WEBSITE
           }
           policy {
-            cookies_allowed: YES
+            cookies_allowed: NO
             cookies_store: "user"
             setting: "Not user controlled. But it uses a trusted web end point"
                      "that doesn't use user data"
@@ -107,6 +108,9 @@ void RlzPingHandler::Ping(
   url_fetcher_->SetAutomaticallyRetryOnNetworkChanges(kMaxRetries);
   url_fetcher_->SetAutomaticallyRetryOn5xx(true);
   url_fetcher_->SetRequestContext(request_context_.get());
+  url_fetcher_->SetLoadFlags(
+      net::LOAD_DISABLE_CACHE | net::LOAD_DO_NOT_SEND_AUTH_DATA |
+      net::LOAD_DO_NOT_SEND_COOKIES | net::LOAD_DO_NOT_SAVE_COOKIES);
   url_fetcher_->Start();
 }
 
